# hive-orchestrator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLOBAL.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: normalize_claude_trigger.py
.github/workflows/: agent-assignment.yml  branch-hygiene.yml  ci.yml  claude.yml  cortex.yml  generate-article-images.yml  projection-sync.yml  release.yml
.hive/: README.md
.hive/events/: 2026-03-15.jsonl  2026-04-06.jsonl  2026-04-07.jsonl
.hive/tasks/: task_01KKQGXZRC4QPP1P18DB198WAZ.md  task_01KKQGXZRESF4YK70HSTW2Y7YA.md  task_01KKQGXZRFMQB2TFCQ4BPYKS0Q.md  task_01KKQGXZRGRE34YENV023Z1Y92.md  task_01KKQGXZRH5ZECMFZ2PC6GA44G.md  task_01KKQGXZRJZK5QYQS4XJVRZE34.md  task_01KKQGXZRKEAAE1THGQ4TP4ZJH.md  task_01KKQGXZRMDPGFZ8FFRVK7TP1C.md  task_01KKQGXZRNNSTMKAWQJ4R81VE6.md  task_01KKQGXZRP3KR1NH6MBRY1AGF8.md  task_01KKQGXZRQ5YRSYM9PEGCZYNPB.md  task_01KKQGXZRR35C52FSBQNWNSQV1.md  task_01KKQGXZRSY4N1SDDE2NEND1PY.md  task_01KKQGXZRTBTFPB3TAN9P7N7NA.md  task_01KKQGXZRVWGVD1TS5HEN76XBQ.md  task_01KKQGXZRWXZSRQS9NYNGEGZRX.md  task_01KKQGXZRXQTN2KJV3ZQ9WWSE3.md  task_01KKQGXZS1W4E6N3PG9182KXVY.md  task_01KKQGXZS2GVX5XY4TKEHS1CYX.md  task_01KKQGXZS37VRD157JKKDR6EX9.md  task_01KKQGXZS5PYDAVM17XJ8RBM1X.md  task_01KKQGXZS73YKGPD2BW1346A8D.md  task_01KKQGXZS8ER4B2SJ0Z72W50MJ.md  task_01KKQGXZSAC0AADG1AD5SEQME1.md  task_01KKQGXZSBR8N6PJ4Z1YVKFKF2.md  task_01KKQGXZSCSPQ665ST5H6PKG7F.md  task_01KKQGXZSDW7TXBBP27WWW35PN.md  task_01KKQGXZSFQV8TNWAJTM069TNM.md  task_01KKQGXZSG3JSCG10WHCN00XS8.md  task_01KKQGXZSJZSRVJZC6VJTFXBNP.md  task_01KKQGXZSKX1NY0P7FY91VT8GG.md  task_01KKQGXZSM5GPX5R2S481R0BNA.md  task_01KKQGXZSN8P49JPYPV1HTF8FS.md  task_01KKQGXZSPG9GFN8JSZWR9RXTK.md  task_01KKQGXZSQ56WA8D11QNV1AP2H.md  task_01KKQGXZSR1NH0D4MJE6CPBB93.md  task_01KKQGXZSSR1F61T3KFJS61YQA.md  task_01KKQGXZSTTB08HNSYS8CTXG7N.md  task_01KKQGXZSVEKAQ09GYGGX6ENSZ.md  task_01KKQGXZSW0A43Q5PX0G8TD5VG.md  (+149 more)
.opencode/: opencode.json
articles/: 01-solving-the-long-horizon-agent-problem.md  02-beads-and-agent-hive-two-approaches-to-agent-memory.md  03-multi-agent-coordination-without-chaos.md  04-dependency-graphs-in-practice.md  05-skills-and-protocols-teaching-agents-to-work-in-agent-hive.md  06-getting-started-your-first-agent-hive-project.md  07-agent-hive-vs-the-framework-landscape.md  08-building-extensible-agent-dispatchers.md  09-agent-hive-security.md  10-weave-tracing-observability.md  11-cross-repo-multi-agent-workflows.md  12-opencode-integration.md  13-ralph-wiggum-and-loom-yolo-loops-edited.md  13-ralph-wiggum-and-loom-yolo-loops.md  13-yolo-looping-infinite-agentic-loops.md  README.md
articles/drafts/: 07-agent-hive-vs-the-framework-landscape.md  08-building-extensible-agent-dispatchers.md  09-agent-hive-security.md  12-opencode-integration.md  13-yolo-looping-infinite-agentic-loops.md
articles/prompts/: 01-solving-the-long-horizon-agent-problem.md  02-beads-and-agent-hive.md  03-multi-agent-coordination-without-chaos.md  04-dependency-graphs-in-practice.md  05-skills-and-protocols.md  06-getting-started.md  07-framework-comparison.md  08-building-extensible-agent-dispatchers.md  09-agent-hive-security.md  10-weave-tracing.md  11-cross-repo-multi-agent-workflows.md  12-opencode-integration.md
config/: app-manifest.json
docs/: ADOPT_EXISTING_REPO.md  AUTONOMY_GAP_ANALYSIS.md  AUTONOMY_V2_5_PLAN.md  COMPARE_HARNESSES.md  DEMO_WALKTHROUGH.md  DESKTOP_BETA.md  HIVE_DOGFOOD_SCRATCHPAD.md  INSTALL_CLAUDE_APP.md  MAINTAINING.md  MIGRATING_TO_V2_2.md  OPERATOR_FLOWS.md  PYPI_README.md  QUICKSTART.md  RELEASING.md  START_HERE.md  UI_INFORMATION_ARCHITECTURE.md  UX_SWEEP.md  V2_2_4_ONBOARDING_POLISH.md  V2_3_STATUS.md  V2_4_FINAL_REASSESSMENT.md  V2_4_STATUS.md  V2_5_RELEASE_WALKTHROUGH.md  V2_5_STATUS.md  yolo-loop-unattended.md
docs/archive/: MIGRATING_TO_V2_2.md  README.md  UX_SWEEP.md  V2_2_4_ONBOARDING_POLISH.md  V2_4_FINAL_REASSESSMENT.md
docs/hive-post-v2.4-rfcs/: README.md
docs/hive-v2-spec/: AGENT_INTERFACE.md  HANDOFF_TO_CODEX.md  (+5 more)
examples/: README.md
frontend/console/src-tauri/: Cargo.toml  tauri.conf.json
frontend/console/src-tauri/capabilities/: default.json
frontend/console/src-tauri/icons/: icon.icns
frontend/console/src-tauri/src/: lib.rs  main.rs
hive/: __init__.py  __main__.py
hive_mcp/: __init__.py  __main__.py
scripts/: build_v22_demo_workspace.py  bump_version.py  generate-images-from-prompts.mjs  generate_homebrew_formula.py  prune_remote_branches.py  run_yolo_loop.sh  smoke_brew_formula.sh  smoke_release_install.sh  start_session.sh  stop_yolo_loop.sh  test-parse.mjs  verify_claude_app.py
src/: __init__.py  agent_dispatcher.py  context_assembler.py  coordinator.py  coordinator_client.py  cortex.py  cross_repo_pipeline.py  dashboard.py  sandbox_runner.py  security.py  tracing.py  yolo_loop.py
tests/: __init__.py  conftest.py  test_agent_dispatcher.py  test_agent_dispatcher_retry_bug.py  test_branch_hygiene.py  test_claude_trigger_normalizer.py  test_claude_workflow.py  test_cli_schema_fixtures.py  test_codex_app_server_worker.py  test_console_api.py  test_console_frontend_story.py  test_context_assembler.py  test_coordinator.py  test_coordinator_auth.py  test_cortex.py  test_cross_repo_pipeline.py  test_dashboard.py  test_event_schema.py  test_graph_intelligence.py  test_hive_campaigns.py  test_hive_control.py  test_hive_drivers.py  test_hive_mcp.py  test_hive_memory_adapters.py  test_hive_memory_quality.py  test_hive_memory_review.py  test_hive_quality.py  test_hive_retrieval_dense.py  test_hive_run_worktree.py  test_hive_v2.py  test_install_story.py  test_launch_collateral.py  test_launch_story.py  test_local_safe_acceptance.py  test_maintainer_surfaces.py  test_onboarding_story.py  test_program_doctor.py  test_release_tooling.py  test_remote_sandbox_acceptance.py  test_sandbox_runner.py  (+14 more)
(+375 files in other folders)
