[project]
name = "agent-hive"
version = "0.1.0"
description = "Agent Hive - Vendor-Agnostic Agent Orchestration OS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Agent Hive Community" }
]
keywords = ["ai", "agents", "orchestration", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=2.8.1,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "streamlit>=1.51.0,<2.0.0",
    "python-frontmatter>=1.1.0,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0,<26.0.0",
    "pylint>=4.0.3,<5.0.0",
    "pytest>=9.0.1,<10.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agent-hive"
Documentation = "https://github.com/your-org/agent-hive/blob/main/README.md"
Repository = "https://github.com/your-org/agent-hive"
Issues = "https://github.com/your-org/agent-hive/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.pylint.messages_control]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
