[project]
name = "agent-hive"
version = "0.1.0"
description = "CLI-first orchestration platform for autonomous agents with Git-backed task, run, and memory state"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Bryan Young" },
    { name = "Agent Hive Community" }
]
keywords = ["ai", "agents", "orchestration", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "requests>=2.32.5,<3.0.0",
    "python-frontmatter>=1.1.0,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.51.0,<2.0.0",
]
mcp = [
    "mcp~=1.22.0",
]
coordinator = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]
tracing = [
    "weave>=0.51.0,<1.0.0",
]
all = [
    "streamlit>=1.51.0,<2.0.0",
    "mcp~=1.22.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "weave>=0.51.0,<1.0.0",
]
dev = [
    "black>=25.11.0,<26.0.0",
    "pylint>=4.0.3,<5.0.0",
    "pytest>=8.2.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pytest-asyncio>=0.24.0,<0.27.0",
    "build>=1.3.0,<2.0.0",
    "twine>=6.2.0,<7.0.0",
    "streamlit>=1.51.0,<2.0.0",
    "mcp~=1.22.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "weave>=0.51.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/intertwine/hive-orchestrator"
Documentation = "https://github.com/intertwine/hive-orchestrator/blob/main/README.md"
Repository = "https://github.com/intertwine/hive-orchestrator"
Issues = "https://github.com/intertwine/hive-orchestrator/issues"
Changelog = "https://github.com/intertwine/hive-orchestrator/releases"

[project.scripts]
hive = "hive.cli.main:main"
hive-mcp = "hive_mcp.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "hive", "hive_mcp"]
only-packages = true

[tool.hatch.build.targets.wheel.force-include]
"src/hive/store/SCHEMA.sql" = "src/hive/store/SCHEMA.sql"

[tool.hatch.build.targets.sdist]
only-include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "src",
    "hive",
    "hive_mcp",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.pylint.messages_control]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
