[project]
name = "mellona-hive"
version = "2.2.2"
description = "CLI-first orchestration platform for autonomous agents with Git-backed task, run, and memory state"
readme = { file = "docs/PYPI_README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Bryan Young" },
    { name = "Agent Hive Community" }
]
keywords = ["ai", "agents", "orchestration", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "requests>=2.32.5,<3.0.0",
    "python-frontmatter>=1.1.0,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
]

[project.optional-dependencies]
# Keep `dashboard` as a compatibility alias for older install docs and scripts.
dashboard = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]
console = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]
mcp = [
    "mcp~=1.22.0",
]
coordinator = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]
tracing = [
    "weave>=0.51.0,<1.0.0",
]
all = [
    "mcp~=1.22.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "weave>=0.51.0,<1.0.0",
]
dev = [
    "black>=25.11.0,<26.0.0",
    "pylint>=4.0.3,<5.0.0",
    "pytest>=8.2.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pytest-asyncio>=0.24.0,<0.27.0",
    "build>=1.3.0,<2.0.0",
    "twine>=6.2.0,<7.0.0",
    "mcp~=1.22.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "weave>=0.51.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/intertwine/hive-orchestrator"
Documentation = "https://github.com/intertwine/hive-orchestrator/blob/main/docs/START_HERE.md"
Repository = "https://github.com/intertwine/hive-orchestrator"
Issues = "https://github.com/intertwine/hive-orchestrator/issues"
Changelog = "https://github.com/intertwine/hive-orchestrator/releases"

[project.scripts]
hive = "hive.cli.main:main"
hive-mcp = "hive_mcp.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "hive", "hive_mcp"]
only-packages = true

[tool.hatch.build.targets.wheel.force-include]
"src/hive/store/SCHEMA.sql" = "src/hive/store/SCHEMA.sql"
"README.md" = "src/hive/resources/docs/README.md"
"docs/START_HERE.md" = "src/hive/resources/docs/START_HERE.md"
"docs/QUICKSTART.md" = "src/hive/resources/docs/QUICKSTART.md"
"docs/ADOPT_EXISTING_REPO.md" = "src/hive/resources/docs/ADOPT_EXISTING_REPO.md"
"docs/COMPARE_HARNESSES.md" = "src/hive/resources/docs/COMPARE_HARNESSES.md"
"docs/UI_INFORMATION_ARCHITECTURE.md" = "src/hive/resources/docs/UI_INFORMATION_ARCHITECTURE.md"
"docs/OPERATOR_FLOWS.md" = "src/hive/resources/docs/OPERATOR_FLOWS.md"
"docs/MIGRATING_TO_V2_2.md" = "src/hive/resources/docs/MIGRATING_TO_V2_2.md"
"docs/hive-v2-spec/AGENT_INTERFACE.md" = "src/hive/resources/docs/hive-v2-spec/AGENT_INTERFACE.md"
"docs/hive-v2-spec/HANDOFF_TO_CODEX.md" = "src/hive/resources/docs/hive-v2-spec/HANDOFF_TO_CODEX.md"
"docs/hive-v2-spec/HIVE_V2_SPEC.md" = "src/hive/resources/docs/hive-v2-spec/HIVE_V2_SPEC.md"
"docs/hive-v2-spec/MIGRATION_PLAN.md" = "src/hive/resources/docs/hive-v2-spec/MIGRATION_PLAN.md"
"docs/hive-v2-spec/MILESTONE_ISSUE_TREE.md" = "src/hive/resources/docs/hive-v2-spec/MILESTONE_ISSUE_TREE.md"
"docs/hive-v2-spec/README.md" = "src/hive/resources/docs/hive-v2-spec/README.md"
"docs/hive-v2-spec/SCHEMA.sql" = "src/hive/resources/docs/hive-v2-spec/SCHEMA.sql"
"docs/hive-v2-spec/examples" = "src/hive/resources/docs/hive-v2-spec/examples"
"docs/hive-v2.2-rfc/README.md" = "src/hive/resources/docs/hive-v2.2-rfc/README.md"
"docs/hive-v2.2-rfc/HIVE_V2_2_RFC.md" = "src/hive/resources/docs/hive-v2.2-rfc/HIVE_V2_2_RFC.md"
"docs/hive-v2.2-rfc/HIVE_V2_2_DRIVER_SPEC.md" = "src/hive/resources/docs/hive-v2.2-rfc/HIVE_V2_2_DRIVER_SPEC.md"
"docs/hive-v2.2-rfc/HIVE_V2_2_ACCEPTANCE_TESTS.md" = "src/hive/resources/docs/hive-v2.2-rfc/HIVE_V2_2_ACCEPTANCE_TESTS.md"
"docs/recipes" = "src/hive/resources/docs/recipes"
"src/hive/resources/console" = "src/hive/resources/console"

[tool.hatch.build.targets.sdist]
only-include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "docs/PYPI_README.md",
    "docs/START_HERE.md",
    "docs/QUICKSTART.md",
    "docs/ADOPT_EXISTING_REPO.md",
    "docs/COMPARE_HARNESSES.md",
    "docs/UI_INFORMATION_ARCHITECTURE.md",
    "docs/OPERATOR_FLOWS.md",
    "docs/MIGRATING_TO_V2_2.md",
    "docs/hive-v2-spec",
    "docs/hive-v2.2-rfc",
    "docs/recipes",
    "frontend/console",
    "src",
    "hive",
    "hive_mcp",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.pylint.messages_control]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
