[package]
name = "hive-command-center-desktop"
version = "0.1.0"
description = "Tauri 2 beta shell for the shared Agent Hive command center frontend"
authors = ["Bryan Young"]
license = "MIT"
repository = "https://github.com/intertwine/hive-orchestrator"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hive_command_center_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
